--- a/index.html
+++ b/index.html
@@ -9,62 +9,58 @@
 	<body>
 		<div class="layout" id="layout">
 			<div id="container" class="container">
-			<header id="header" class="header" role="banner">
-				<span>Welcome to Jam's Blog</span>
-				<div id="navigation">
-					<nav>
-						<ul>
-							<li><a href="#project-playground-1">home</a></li>
-							<li><a href="#project-playground-2">article</a></li>
-							<li><a href="#project-playground-3">address</a></li>
-						</ul>
-					</nav>
+				<header id="header" class="header" role="banner">
+
+					<div id="favicon"></div>
+			
+					<div id="nav">
+						<nav>
+							<span id="welcome">Welcome to Jam's Blog</span>
+							<ul>
+								<li><a href="#home">Home</a></li>
+								<li><a href="#article">Article</a></li>
+								<li><a href="#contact">Contact</a></li>
+							</ul>
+						</nav>
+					</div>
+
+				</header>
+
+				<div id="main" class="main"></div>
+
+
+
+				<div id="poetry">
+					<article>
+						<h1>寻梦者<br></h1><h3>&nbsp;&nbsp;&nbsp;--戴望舒</h3>
+						<p>梦会开出花来的，<br>
+							梦会开出娇妍的花来的<br>
+							去求无价的珍宝吧。<br>
+							在青色的大海里，<br>
+							在青色的大海的底里，<br>
+							深藏着金色的贝一枚。<br>
+							你去攀九年的冰山吧，<br>
+							你去航九年的瀚海吧，<br>
+							然后你逢到那金色的贝。<br>
+							它有天上的云雨声，<br>
+							它有海上的风涛声，<br>
+							它会使你的心沉醉。<br>
+							把它在海水里养九年，<br>
+							把它在天水里养九年，<br>
+							然后,它在一个暗夜里开绽了。<br>
+							当你鬓发斑斑了的时候，<br>
+							当你眼睛朦胧了的时候，<br>
+							金色的贝吐出桃色的珠。<br>
+							把桃色的珠放在你怀里，<br>
+							把桃色的珠放在你枕边，<br>
+							于是一个梦静静地升上来了。<br>
+							你的梦开出花来了，<br>
+							你的梦开出娇妍的花来了，<br>
+							在你已衰老了的时候。<br>
+					</article>
 				</div>
-			</header>
-			
-			<div id="main" class="main"></div>
 
-			<div id="header" class="header">
-				<img src="img/background.jpeg" />
+				
 			</div>
-			
-
-			<div class="project-blackground-1">
-				<article>
-					<h1>寻梦者<br>--戴望舒</h1>
-					<p>梦会开出花来的，<br>
-					梦会开出娇妍的花来的<br>
-					去求无价的珍宝吧。<br>
-					在青色的大海里，<br>
-					在青色的大海的底里，<br>
-					深藏着金色的贝一枚。<br>
-					你去攀九年的冰山吧，<br>
-					你去航九年的瀚海吧，<br>
-					然后你逢到那金色的贝。<br>
-					它有天上的云雨声，<br>
-					它有海上的风涛声，<br>
-					它会使你的心沉醉。<br>
-					把它在海水里养九年，<br>
-					把它在天水里养九年，<br>
-					然后,它在一个暗夜里开绽了。<br>
-					当你鬓发斑斑了的时候，<br>
-					当你眼睛朦胧了的时候，<br>
-					金色的贝吐出桃色的珠。<br>
-					把桃色的珠放在你怀里，<br>
-					把桃色的珠放在你枕边，<br>
-					于是一个梦静静地升上来了。<br>
-					你的梦开出花来了，<br>
-					你的梦开出娇妍的花来了，<br>
-					在你已衰老了的时候。<br>
-				</article>
-			</div>
-
-			<div class="project-blackground-2">
-			</div>
-
-			<div class="project-blackground-3">
-
-			</div>
-		</div>
 	</body>
 </html>
